--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Aprovado_Reprovado",
+      "request": "launch",
+      "mainClass": "tomando_decisoes_codigo_projetos.exercicio1.Aprovado_Reprovado",
+      "projectName": "Projetos-Java_d406edc6"
+    },
+    {
+      "type": "java",
       "name": "CategoriaAtleta",
       "request": "launch",
       "mainClass": "tomando_decisoes_codigo_projetos.exercicio4.CategoriaAtleta",
