--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Fibonacci",
+      "request": "launch",
+      "mainClass": "repetindo_instrucoes.exercicio6.Fibonacci",
+      "projectName": "Projetos-Java_d406edc6"
+    },
+    {
+      "type": "java",
+      "name": "Fatorial",
+      "request": "launch",
+      "mainClass": "repetindo_instrucoes.exercicio5.Fatorial",
+      "projectName": "Projetos-Java_d406edc6"
+    },
+    {
+      "type": "java",
       "name": "ImpressaoMaiorNumero",
       "request": "launch",
       "mainClass": "repetindo_instrucoes.exercicio4.ImpressaoMaiorNumero",
